# Openclaw-NapcatQQ

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SKILLS.md  docker-compose.yaml  index.ts  package.json  pyproject.toml
nap-msg/: env.example  pyproject.toml
nap-msg/nap_msg/: cli.py  video.py
napcat/: index.ts  package.json
napcat/src/: channel.ts  config-schema.ts  deliver.ts  rpc-client.ts  runtime.ts  types.ts
src/: asr.ts  channel.ts  config-schema.ts  deliver.ts  logger.ts  media.ts  runtime.ts  types.ts  watcher.ts  ws-client.ts
src/nap_msg/: asr.py  cli.py  daemon.py  rpc.py  watch.py
